# claudecode

./: .gitlab-ci.yml  CLAUDE.md
.claude/: debug-hook.sh  send-permission-notify.sh
.claude/agents/: code-reviewer.md
sdd-specify/: .gitignore  CLAUDE.md  README.md  pyproject.toml
sdd-specify/.specify/memory/: constitution.md
sdd-specify/.specify/templates/: plan-template.md
sdd-specify/specs/001-video-quality-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sdd-specify/specs/001-video-quality-validation/checklists/: requirements-quality.md  requirements.md
sdd-specify/specs/001-video-quality-validation/contracts/: cli.md
sdd-specify/src/video_quality_validator/: __init__.py  cli.py  core.py  models.py  utils.py
sdd-specify/tests/: __init__.py  test_cli.py  test_core.py  test_models.py
skyclipper/: .coveragerc  .gitignore  CLAUDE.md  README.md  merge_and_parse_clips.py  parser_vis.py  pytest.ini  run_multinode.sh  run_singlenode.sh  vllm_offline_qwen3_vl_parallel.py
skyclipper/.specify/memory/: constitution.md
skyclipper/.specify/templates/: plan-template.md
skyclipper/data/prompt-templates/: prompt_template_action_en.txt  prompt_template_action_zh.txt
skyclipper/docs/: flow-diagram.html
skyclipper/input_data/: test.csv
skyclipper/specs/001-refactor-codebase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
skyclipper/src/: __init__.py
skyclipper/src/cli/: merge_results.py  process_videos.py  visualize.py
skyclipper/src/core/: __init__.py  action_recognizer.py  result_merger.py  (+3 more)
(+15 files in other folders)
